# sports-betting-mcp

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml  server.json
src/sports_betting_mcp/: server.py
