[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sports-betting-mcp"
version = "0.1.2"
description = "MCP server for AI-powered sports betting analysis — NBA, NHL, NCAAB"
mcpName = "io.github.seang1121/sports-betting-mcp"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
sports-betting-mcp = "sports_betting_mcp.server:mcp.run"

[project.urls]
Homepage = "https://github.com/seang1121/sports-betting-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/sports_betting_mcp"]
