[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sports-betting-mcp"
version = "1.0.0"
description = "Live sports betting MCP server — AI picks, odds, injuries, line movement across NBA, NHL, NCAAB, MLB. 12 tools for real-time game analysis."
mcpName = "io.github.seang1121/sports-betting-mcp"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    {name = "Sean Goudy"},
]
keywords = ["mcp", "sports-betting", "ai", "nba", "nhl", "ncaab", "mlb", "odds", "predictions", "claude"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
sports-betting-mcp = "sports_betting_mcp.server:mcp.run"

[project.urls]
Homepage = "https://sportsbettingaianalyzer.com"
Repository = "https://github.com/seang1121/sports-betting-mcp"
Issues = "https://github.com/seang1121/sports-betting-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sports_betting_mcp"]
